tests/errors/variant_flow/structured/structured_switch_duplicate_arm_at_terminator_span.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f(o: Option) {
              entry:
                switchEnum(o) [None: a, None: b, Some: c]
              a: return
              b: return
              c: return
            }